<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#645A95">

    <TextView
        android:text="@string/coach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coach"
        android:layout_weight="0.03"
        android:textSize="18sp"
        android:textColor="@color/Pantone_Coated_2572_C" />

    <EditText android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_address" />
    
    <EditText android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/category" />

    <EditText android:id="@+id/area_of_expertise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/area_of_expertise" />

    <EditText android:id="@+id/experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/experience" />

    <EditText android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/company" />

    <EditText android:id="@+id/current_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/current_position" />

    <EditText android:id="@+id/alma_matta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/alma_matta" />

    <EditText android:id="@+id/biography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/biography" />

    <EditText android:id="@+id/upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/upload_image" />

    <Button
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/send"
        android:onClick="search_preferences"
        android:background="@drawable/background"
        android:textColor="@color/Pantone_Coated_2572_C" />
</LinearLayout>