<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F5CFF">

    <Button
        android:text="@string/team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/team"
        android:elevation="0dp"
        android:onClick="team_sign_up"/>

    <Button
        android:text="@string/free_agent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/free_agent"
        android:elevation="0dp"
        android:onClick="free_agent_sign_up" />

    <Button
        android:text="@string/coach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coach"
        android:onClick="coach_sign_up"/>

</LinearLayout>