<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#645A95">

    <Space
        android:layout_width="match_parent"
        android:layout_height="120dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/email_address"
        android:ems="10"
        android:id="@+id/email_address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="Password" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/login"
        android:textColor="@color/Pantone_Coated_2572_C"
        android:background="@drawable/background" />

    <Button
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/forgot_password"
        android:textColor="@color/Pantone_Coated_2572_C"
        android:background="@drawable/background" />
</LinearLayout>